# Fireplace

./: .gitignore  CMakeLists.txt  README.md  fireplace.service  install-service.sh  makeit.sh  update-resources.sh  update-service.sh
source/: DaytimeDisplay.cpp  DaytimeDisplay.h  DisplayClock.cpp  DisplayClock.h  DisplayWeather.cpp  NightDisplay.cpp  NightDisplay.h  Temperature.cpp  TinyTools.cpp  TinyTools.h  VideoToTexture.cpp  VideoToTexture.h  main.cpp
